<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/new_folder"
			android:icon="@drawable/ic_menu_add"
			android:title="@string/menu_addFolder"
			android:showAsAction="ifRoom" />
	<item android:id="@+id/preferences"
			android:icon="@drawable/ic_menu_preferences"
			android:title="@string/menu_preferences"
			android:showAsAction="ifRoom" />
	<item android:id="@+id/menu_more"
		android:title="More"
		android:icon="@android:drawable/ic_menu_more"
		android:showAsAction="ifRoom">
		<menu xmlns:android="http://schemas.android.com/apk/res/android">
			<item android:id="@+id/refresh"
					android:icon="@drawable/ic_menu_refresh"
					android:title="@string/menu_refresh" />
			<item android:id="@+id/batch_move"
					android:title="@string/menu_batch_move" />
			<item android:id="@+id/show_hidden"
					android:title="@string/show_hidden" />
		</menu>
	</item>
</menu>
